--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cordova-plugin-camera": "^4.0.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "onesignal-cordova-plugin": "^2.4.1",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
@@ -41,7 +42,8 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-camera": {}
+      "cordova-plugin-camera": {},
+      "onesignal-cordova-plugin": {}
     }
   }
 }
